--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 <div id="notes">
   <ul>
-    <li>Use keyboard or mouse!</li>
+    <li>Use keyboard or calculator buttons!</li>
     <li>Letter c works as calculator button C; Delete as CE; n as &#177;; s as &#8730;; r as 1/x.</li>
     <li>Input numbers are limited to ten digits before decimal point and five digits after.</li>
     <li>To calculate x percent of y simply enter x%y.</li>
